# edge-ai-libraries

.github/workflows/: dlsps-build-scans-pr-workflow.yaml  siv-weekly-tag.yaml  vippet-pr-workflow.yaml
libraries/robotics-ai-libraries/orb-extractor/: Makefile  README.md
libraries/robotics-ai-libraries/orb-extractor/humble/debian/: changelog
libraries/robotics-ai-libraries/orb-extractor/jazzy/debian/: changelog
libraries/robotics-ai-libraries/orb-extractor/scripts/: run_fuzzers.sh  test.sh
libraries/robotics-ai-libraries/orb-extractor/src/gpu/: fast.cpp
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/include/: device.h
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/src/: device.cpp  device_memory.cpp  gpu_memory_manager.cpp
microservices/document-ingestion/pgvector/: pyproject.toml
microservices/model-download/: pyproject.toml
microservices/model-download/chart/: values.yaml
microservices/model-download/chart/templates/: deployment.yaml
microservices/model-download/docker/: Dockerfile
microservices/model-download/docs/user-guide/: deploy-with-helm-chart.md  get-started.md  index.md  release-notes.md  running-tests.md
microservices/model-download/src/plugins/: geti_plugin.py  openvino_plugin.py
sample-applications/chat-question-and-answer-core/: pyproject.toml
sample-applications/chat-question-and-answer-core/tests/: README.md
sample-applications/chat-question-and-answer-core/ui/: package-lock.json  package.json
sample-applications/chat-question-and-answer/chart/: values.yaml
sample-applications/chat-question-and-answer/chart/subchart/embedding/ovms/templates/: ovms-deployment.yaml
sample-applications/chat-question-and-answer/chart/subchart/llm/ovms/templates/: ovms-deployment.yaml
sample-applications/chat-question-and-answer/docs/user-guide/get-started/: deploy-with-helm.md
sample-applications/video-search-and-summarization/chart/: Chart.yaml  values.yaml  xeon_vllm_values.yaml
sample-applications/video-search-and-summarization/chart/subchart/audio-analyzer/: values.yaml
sample-applications/video-search-and-summarization/chart/subchart/audio-analyzer/templates/: audio-analyzer-deployment.yaml
sample-applications/video-search-and-summarization/chart/subchart/minio-server/: values.yaml
sample-applications/video-search-and-summarization/chart/subchart/minio-server/templates/: minio-server-deployment.yaml
sample-applications/video-search-and-summarization/chart/subchart/video-ingestion/: values.yaml
sample-applications/video-search-and-summarization/chart/subchart/video-ingestion/templates/: video-ingestion-deployment.yaml
sample-applications/video-search-and-summarization/chart/subchart/video-search/: values.yaml
sample-applications/video-search-and-summarization/chart/subchart/video-search/templates/: video-search-deployment.yaml
sample-applications/video-search-and-summarization/chart/subchart/video-summary-ui/: values.yaml
sample-applications/video-search-and-summarization/chart/subchart/video-summary-ui/templates/: video-summary-ui-deployment.yaml
sample-applications/video-search-and-summarization/chart/subchart/vllm/: Chart.yaml  values.yaml
sample-applications/video-search-and-summarization/chart/subchart/vllm/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
sample-applications/video-search-and-summarization/chart/templates/: pipeline-manager-deployment.yaml
sample-applications/video-search-and-summarization/docs/user-guide/: deploy-with-helm.md
sample-applications/video-search-and-summarization/pipeline-manager/src/config/: configuration.ts
sample-applications/video-search-and-summarization/pipeline-manager/src/language-model/services/: llm.service.ts  vlm.service.ts
tools/visual-pipeline-and-platform-evaluation-tool/: AGENTS.md  Makefile  compose.yml
tools/visual-pipeline-and-platform-evaluation-tool/docs/user-guide/: troubleshooting.md
tools/visual-pipeline-and-platform-evaluation-tool/docs/user-guide/_assets/: vippet.json
tools/visual-pipeline-and-platform-evaluation-tool/models/: Dockerfile
tools/visual-pipeline-and-platform-evaluation-tool/ui/: nginx.conf  package-lock.json  package.json
tools/visual-pipeline-and-platform-evaluation-tool/ui/src/features/demo/: DemoMode.tsx
tools/visual-pipeline-and-platform-evaluation-tool/video_generator/: Dockerfile  imagetovideo.py  readme.md
tools/visual-pipeline-and-platform-evaluation-tool/vippet/: Dockerfile  benchmark.py  graph.py  utils.py  video_encoder.py  videos.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/api/: api_schemas.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/api/routes/: videos.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/managers/: pipeline_manager.py  tests_manager.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/tests/: graph_test.py  utils_test.py  video_encoder_test.py  videos_test.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/tests/managers_tests/: tests_manager_test.py
