[tool.poetry]
name = "chatqna-core"
version = "0.1"
description = "A monolithic chat-based question and answer system that leverages Intel's advanced Generative AI technologies and employs Retrieval-Augmented-Generation (RAG) techniques."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docx2txt = "^0.9"
faiss-cpu = "1.11.0"
fastapi = "0.120.2"
h11 = "0.16.0"
langchain-classic = "1.0.1"
langchain-core = "1.2.11"
langchain-community = "^0.3.9"
pandas = "2.2.3"
pillow = "12.1.1"
pyarrow = "20.0.0"
pypdf = "^6.8.0"
python-multipart = "0.0.22"
requests = "2.32.5"
transformers = "4.53.3"
uvicorn = ">=0.21.0,<0.23.0"

[tool.poetry.group.openvino.dependencies]
huggingface_hub = "0.34.4"
langchain-huggingface = "1.2.0"
optimum = {extras = ["openvino", "nncf"], version = "2.1.0"}

[tool.poetry.group.ollama.dependencies]
langchain-ollama = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.poetry.group.cpu.dependencies]
torch = { version = "2.8.0", source = "pytorch-cpu" }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
